manage windows state is OK

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
     <input type="button" id="new-window" value="create a new windows"></input>
-    <input type="button" id="new-window" value="window state"></input>
+    <input type="button" id="state-window" value="window state"></input>
+    <label id="state-window-reply"></label>
   </body>
 
   <script>
