--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
-    <input type="button" id="new-window" value="create a new windows"></input>
-    <input type="button" id="state-window" value="window state"></input>
-    <label id="state-window-reply"></label>
+    <div>
+      <input type="button" id="new-window" value="create a new windows"></input>
+    </div>
+    <div>
+      <input type="button" id="state-window" value="window state"></input>
+      <label id="state-window-reply"></label>
+    </div>
+    <div>
+      <input type="button" id="blur-window" value="window blur"></input>
+      <input type="button" id="focus-window" value="window focus"></input>
+    </div>
   </body>
 
   <script>
