forth demo down

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <input type="button" id="blur-window" value="window blur"></input>
       <input type="button" id="focus-window" value="window focus"></input>
     </div>
+    <div>
+      <input type="button" id="frameless-window" value="frameless"></input>
+    </div>
   </body>
 
   <script>
