--- a/modal.html
+++ b/modal.html
@@ -8,6 +8,7 @@
         <div>
             hello, this is the first window.
         </div>
+        <input type="button" id="off" value="close the window"></input>
     </body>
     <script>
     </script>
