second js & button event listening added, how to do?

--- a/modal.html
+++ b/modal.html
@@ -10,6 +10,5 @@
         </div>
         <input type="button" id="off" value="close the window"></input>
     </body>
-    <script>
-    </script>
+    <script src = "modal.js"></script>
 </html>
